# testnbdev3

./: README.md  pyproject.toml
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
testnbdev3/: _modidx.py  core.py
