[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "testnbdev3"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "perceptualrobots", email = "rupert@perceptualrobots.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ['nbdev>=3.0.10']

[project.urls]
Repository = "https://github.com/perceptualrobots/testnbdev3"
Documentation = "https://perceptualrobots.github.io/testnbdev3/"

[project.entry-points.nbdev]
testnbdev3 = "testnbdev3._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "testnbdev3.__version__"}

[tool.setuptools.packages.find]
include = ["testnbdev3"]

[tool.nbdev]
